[project]
name = "image-vectors"
version = "0.1.0"
description = "Create image embeddings easily."
authors = [
    {name = "Maximilian Wessendorf", email = "maxi-git@outlook.de"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "Apache 2.0"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pdm.dev-dependencies]
test = ["pytest"]

[tool.pdm.scripts]
test = "pytest"

[tool.pdm]
distribution = true
